--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
   --border-bottom: #e7e9fc;
   --green-color: #31d0aa;
   --grey-universal: #8e8f99;
+  --modal-bcg: FCFCFC;
 }
 
 h1,
@@ -564,3 +565,41 @@ body {
 .footer-list-svg {
   fill: var(--grey-cornflower);
 }
+
+/*------------- /footer -----------------*/
+/* ============= backdrop =============*/
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 408px;
+  height: 576px;
+  background-color: var(--modal-bcg);
+}
+.modal-close-btn {
+  position: absolute;
+  top: 24px;
+  left: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: var(--border-bottom);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  padding: 0;
+}
+.modal-close-btn-icon {
+}
+/* ============= /backdrop =============*/
