--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,9 @@
   --border-bottom: #e7e9fc;
   --green-color: #31d0aa;
   --grey-universal: #8e8f99;
-  --modal-bcg: FCFCFC;
+  --modal-bcg: #fcfcfc;
+
+  --transition-dur-func: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 h1,
@@ -576,6 +578,13 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
+  transition: opacity var(--transition-dur-func),
+    visibility var(--transition-dur-func);
+}
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
 .modal {
   position: absolute;
@@ -585,11 +594,14 @@ body {
   width: 408px;
   height: 576px;
   background-color: var(--modal-bcg);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
 }
 .modal-close-btn {
   position: absolute;
   top: 24px;
-  left: 24px;
+  right: 24px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -599,7 +611,20 @@ body {
   background-color: var(--border-bottom);
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
+  transition: background-color var(--transition-dur-func);
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  background-color: var(--push-btn-portfolio);
+  border: 1px solid transparent;
 }
 .modal-close-btn-icon {
+  transition: fill var(--transition-dur-func);
 }
+.modal-close-btn:hover .modal-close-btn-icon,
+.modal-close-btn:focus .modal-close-btn-icon {
+  fill: var(--color-white-fff);
+}
+
 /* ============= /backdrop =============*/
