--- a/css/styles.css
+++ b/css/styles.css
@@ -140,23 +140,19 @@ body {
 .header-link:hover {
   color: var(--push-btn-portfolio);
 }
-.header-link::after {
+.current::after {
   content: " ";
 
   position: absolute;
   left: 0;
   bottom: 0;
-  display: block;
+
   width: 100%;
   height: 4px;
   background-color: var(--push-btn-portfolio);
   border-radius: 2px;
-  opacity: 0;
+
   transition: opacity var(--transition-dur-func);
-}
-.header-link:hover::after,
-.header-link:focus::after {
-  opacity: 1;
 }
 
 .address {
