--- a/css/styles.css
+++ b/css/styles.css
@@ -140,6 +140,9 @@ body {
 .header-link:hover {
   color: var(--push-btn-portfolio);
 }
+.current {
+  color: var(--push-btn-portfolio);
+}
 .current::after {
   content: " ";
 
@@ -175,6 +178,8 @@ body {
 }
 
 .contacts-address {
+  padding: 24px 0;
+
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
@@ -613,7 +618,7 @@ body {
   height: 40px;
   border-radius: 50%;
 
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: var(--blue-text-color);
   transition: background-color var(--transition-dur-func);
 }
 
